--- a/index.html
+++ b/index.html
@@ -24,21 +24,23 @@
             <div class="container">
 
 				<h2>Список страниц</h2>
-				<h3>Общие страницы</h3>
-                <p><a href="varilight_00_typography.html">Типографика</a></p>
-                <p><a href="varilight_01_index.html">Главная страница</a></p>
+				<h3>Коллекции</h3>
                 <p><a href="varilight_02_collections.html">Коллекции</a></p>
-                <p><a href="varilight_03_collection.html">Отдельная коллекция</a></p>
-                <p><a href="varilight_04_product.html">Страница товара</a></p>
-                <p><a href="varilight_04_product_gold.html">Страница товара - Золотой</a></p>
+                <p><a href="varilight_03_collection.html">Карточка коллекция</a></p>
+                <p><a href="varilight_04_product.html">Карточка товара</a></p>
+                <p><a href="varilight_04_product_gold.html">Карточка товара - Золотой</a></p>
                 <p><a href="varilight_05_compare.html">Сравнение товаров</a></p>
+				<h3>Общие страницы</h3>
+                <p><a href="varilight_01_index.html">Главная страница</a></p>
                 <p><a href="varilight_06_dimmer.html">Подбор диммера</a></p>
                 <p><a href="varilight_07_tv.html">Varilight TV</a></p>
                 <p><a href="varilight_08_download.html">Скачать</a></p>
                 <p><a href="varilight_09_buy.html">Где купить</a></p>
                 <p><a href="varilight_10_contacts.html">Контакты</a></p>
+				<h3>Служебные страницы</h3>
                 <p><a href="varilight_11_404page.html">Страница 404</a></p>
                 <p><a href="varilight_12_search.html">Результаты поиска</a></p>
+				<p><a href="varilight_00_typography.html">Типографика</a></p>
 
             </div>
             <!-- container END -->
