--- a/varilight_00_typography.html
+++ b/varilight_00_typography.html
@@ -76,45 +76,24 @@
                     <div class="search-window-close"></div>
                 </div>
 
-                <!-- slider -->
-                <div class="slider">
-                    <div class="slider-item">
-                        <div class="slider-item-inner">
-                            <div class="slider-item-bg" style="background-image:url(files/slider-typography.jpg)"></div>
-                            <div class="slider-item-content">
-                                <div class="container">
-                                    <h1>h1 Сравнение товаров</h1>
-                                    <div class="slider-item-text">Это современная интерпретация классического дизайна.<br /> Края рамок декорированы орнаментом из бисера, напоминающем об очаровательном и изящном неоклассическом стиле.</div>
-                                </div>
-                            </div>
+                <!-- slider page -->
+                <div class="slider-page">
+                    <div class="slider-page-list">
+                        <div class="slider-page-item">
+                            <div class="slider-page-item-bg" style="background-image:url(files/slider-typography.jpg)"></div>
+                        </div>
+                        <div class="slider-page-item">
+                            <div class="slider-page-item-bg" style="background-image:url(files/slider.jpg)"></div>
                         </div>
                     </div>
-                    <div class="slider-item">
-                        <div class="slider-item-inner">
-                            <div class="slider-item-bg" style="background-image:url(files/slider.jpg)"></div>
-                            <div class="slider-item-content">
-                                <div class="container">
-                                    <h1>Выключатели</h1>
-                                    <div class="slider-item-text">Стандартный механизм выключателя обеспечивает управление из 2-х мест, кроме того существует механизм для управления освещением из 3-х мест. Таким образом, Вы можете легко выбрать механизмы, наиболее подходящие для реализации вашего проекта.</div>
-                                    <div class="slider-item-btn"><a href="#" class="btn">Подробнее</a></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slider-item">
-                        <div class="slider-item-inner">
-                            <div class="slider-item-bg" style="background-image:url(files/slider.jpg)"></div>
-                            <div class="slider-item-content">
-                                <div class="container">
-                                    <h1>Выключатели</h1>
-                                    <div class="slider-item-text">Стандартный механизм выключателя обеспечивает управление из 2-х мест, кроме того существует механизм для управления освещением из 3-х мест. Таким образом, Вы можете легко выбрать механизмы, наиболее подходящие для реализации вашего проекта.</div>
-                                    <div class="slider-item-btn"><a href="#" class="btn">Подробнее</a></div>
-                                </div>
-                            </div>
+                    <div class="slider-page-container">
+                        <div class="container">
+                            <h1>h1 Сравнение товаров</h1>
+                            <div class="slider-item-text">Это современная интерпретация классического дизайна.<br /> Края рамок декорированы орнаментом из бисера, напоминающем об очаровательном и изящном неоклассическом стиле.</div>
                         </div>
                     </div>
                 </div>
-                <!-- slider END -->
+                <!-- slider page END -->
 
                 <!-- container -->
                 <div class="container">
