--- a/varilight_01_index.html
+++ b/varilight_01_index.html
@@ -92,11 +92,11 @@
                     </div>
                     <div class="slider-item">
                         <div class="slider-item-inner">
-                            <div class="slider-item-bg" style="background-image:url(files/slider.jpg)"></div>
+                            <div class="slider-item-bg" style="background-image:url(images/collections-header.jpg)"></div>
                             <div class="slider-item-content">
                                 <div class="container">
-                                    <h1>Выключатели</h1>
-                                    <div class="slider-item-text">Стандартный механизм выключателя обеспечивает управление из 2-х мест, кроме того существует механизм для управления освещением из 3-х мест. Таким образом, Вы можете легко выбрать механизмы, наиболее подходящие для реализации вашего проекта.</div>
+                                    <h1>Коллекции</h1>
+                                    <div class="slider-item-text">С четырьмя различными типами переключателей на выбор из широкого ассортимента декоративной отделки и стилей лицевой панели, диапазон VARILIGHT очень широк</div>
                                     <div class="slider-item-btn"><a href="#" class="btn">Подробнее</a></div>
                                 </div>
                             </div>
@@ -104,11 +104,11 @@
                     </div>
                     <div class="slider-item">
                         <div class="slider-item-inner">
-                            <div class="slider-item-bg" style="background-image:url(files/slider.jpg)"></div>
+                            <div class="slider-item-bg" style="background-image:url(images/tv-header.jpg)"></div>
                             <div class="slider-item-content">
                                 <div class="container">
-                                    <h1>Выключатели</h1>
-                                    <div class="slider-item-text">Стандартный механизм выключателя обеспечивает управление из 2-х мест, кроме того существует механизм для управления освещением из 3-х мест. Таким образом, Вы можете легко выбрать механизмы, наиболее подходящие для реализации вашего проекта.</div>
+                                    <h1>Varilight TV</h1>
+                                    <div class="slider-item-text">Это современная интерпретация классического дизайна.<br /> Края рамок декорированы орнаментом из бисера, напоминающем об очаровательном и изящном неоклассическом стиле.</div>
                                     <div class="slider-item-btn"><a href="#" class="btn">Подробнее</a></div>
                                 </div>
                             </div>
@@ -132,19 +132,25 @@
                                     <div class="main-collection-big-photo"><a href="#"><img src="files/main-collection-1-big.jpg" alt="" /></a></div>
                                     <div class="main-collection-btn"><a href="#" class="btn">Смотреть всю коллекцию</a></div>
                                 </div>
-                                <div class="main-collection-small">
-                                    <a href="#">
-                                        <div class="main-collection-small-photo"><img src="files/main-collection-1-small-1.jpg" alt="" /></div>
-                                        <div class="main-collection-small-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
-                                        <div class="main-collection-small-price">€ 9.29</div>
-                                    </a>
+                                <div class="collection-products-item gold">
+                                    <div class="collection-products-item-wrap">
+                                        <a href="#" class="collection-products-item-inner">
+                                            <div class="collection-products-item-preview"><img src="files/main-collection-1-small-1.jpg" alt="" /></div>
+                                            <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                                            <div class="collection-products-item-price">€ 9.29</div>
+                                        </a>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                    </div>
                                 </div>
-                                <div class="main-collection-small">
-                                    <a href="#">
-                                        <div class="main-collection-small-photo"><img src="files/main-collection-1-small-2.jpg" alt="" /></div>
-                                        <div class="main-collection-small-title">Z1EG1S Одноклавишный выключатель/переключатель10А Brushed Steel</div>
-                                        <div class="main-collection-small-price">€ 9.29</div>
-                                    </a>
+                                <div class="collection-products-item gold">
+                                    <div class="collection-products-item-wrap">
+                                        <a href="#" class="collection-products-item-inner">
+                                            <div class="collection-products-item-preview"><img src="files/main-collection-1-small-2.jpg" alt="" /></div>
+                                            <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                                            <div class="collection-products-item-price">€ 9.29</div>
+                                        </a>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -159,19 +165,25 @@
                                     <div class="main-collection-big-photo"><a href="#"><img src="files/main-collection-2-big.jpg" alt="" /></a></div>
                                     <div class="main-collection-btn"><a href="#" class="btn">Смотреть всю коллекцию</a></div>
                                 </div>
-                                <div class="main-collection-small">
-                                    <a href="#">
-                                        <div class="main-collection-small-photo"><img src="files/main-collection-2-small-1.jpg" alt="" /></div>
-                                        <div class="main-collection-small-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
-                                        <div class="main-collection-small-price">€ 9.29</div>
-                                    </a>
+                                <div class="collection-products-item">
+                                    <div class="collection-products-item-wrap">
+                                        <a href="#" class="collection-products-item-inner">
+                                            <div class="collection-products-item-preview"><img src="files/main-collection-2-small-1.jpg" alt="" /></div>
+                                            <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                                            <div class="collection-products-item-price">€ 9.29</div>
+                                        </a>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                    </div>
                                 </div>
-                                <div class="main-collection-small">
-                                    <a href="#">
-                                        <div class="main-collection-small-photo"><img src="files/main-collection-2-small-2.jpg" alt="" /></div>
-                                        <div class="main-collection-small-title">Z1EG1S Одноклавишный выключатель/переключатель10А Brushed Steel</div>
-                                        <div class="main-collection-small-price">€ 9.29</div>
-                                    </a>
+                                <div class="collection-products-item">
+                                    <div class="collection-products-item-wrap">
+                                        <a href="#" class="collection-products-item-inner">
+                                            <div class="collection-products-item-preview"><img src="files/main-collection-2-small-2.jpg" alt="" /></div>
+                                            <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                                            <div class="collection-products-item-price">€ 9.29</div>
+                                        </a>
+                                        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
