--- a/varilight_06_dimmer.html
+++ b/varilight_06_dimmer.html
@@ -100,7 +100,28 @@
 
                     <!-- dimmer table -->
                     <div class="dimmer-table">
-                        <div class="table-scroll">
+                        <div class="dimmer-table-fixed">
+                            <div class="container">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Тип нагрузки</th>
+                                            <th>V-Dim</th>
+                                            <th>V-Com</th>
+                                            <th>V-Pro</th>
+                                            <th>V-Pro IR</th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                                <div class="dimmer-table-prev"></div>
+                                <div class="dimmer-table-next"></div>
+                            </div>
+                        </div>
+
+                        <div class="dimmer-table-prev"></div>
+                        <div class="dimmer-table-next"></div>
+
+                        <div class="dimmer-table-container">
                             <table>
                                 <thead>
                                     <tr>
@@ -217,11 +238,12 @@
                     </div>
 
                     <div class="dimmer-select">
-                        <div class="dimmer-select-title">
-                            <div class="dimmer-select-title-inner">V-это<br /> разнообразие</div>
-                        </div>
+                        <div class="dimmer-select-photo"><img src="images/dimmer-select.jpg" alt="" /></div>
                         <div class="dimmer-select-text">
-                            <div class="dimmer-select-text-inner">Никогда раньше покупатели не имели такого выбора источников света, как сейчас, и поэтому компания Varilight предлагает широкую гамму диммеров для наиболее полного удовлетворения потребностей постоянно растущего рынка.</div>
+                            <div class="dimmer-select-text-inner">
+                                <h2>V-это разнообразие</h2>
+                                <p>Никогда раньше покупатели не имели такого выбора источников света, как сейчас, и поэтому компания Varilight предлагает широкую гамму диммеров для наиболее полного удовлетворения потребностей постоянно растущего рынка.</p>
+                            </div>
                         </div>
                     </div>
 
