--- a/varilight_10_contacts.html
+++ b/varilight_10_contacts.html
@@ -108,7 +108,7 @@
                             <div class="contacts-value">+7 (495) 228-32-44</div>
 
                             <div class="contacts-title">Электронная почта</div>
-                            <div class="contacts-value">info@gammaplast.ru</div>
+                            <div class="contacts-value"><a href="mailto:info@gammaplast.ru">info@gammaplast.ru</a></div>
 
                             <div class="contacts-title">Как пройти</div>
                             <div class="contacts-text">От ст.м. Калужская (1-й вагон из центра, выход на ул. Обручева, к ТЦ "Калужский") пройдите 10 мин. Двигайтесь вдоль улицы Обручева, против движения транспорта, мимо заправки "Лукойл" до второго светофора - пересечения с Научным проездом.  По левую сторону увидите ювелирный магазин "Монарх", через дорогу наискосок от ювелирного магазина - бизнес-центр "9 акров". Наш шоу-рум расположен на 3-м этаже в правом крыле бизнес-центра, вывеска на двери "IBERELECTRO".</div>
@@ -129,9 +129,9 @@
 
                                     var image = new google.maps.MarkerImage(
                                                     'images/map-icon.png',
-                                                    new google.maps.Size(99, 70),
+                                                    new google.maps.Size(131, 101),
                                                     new google.maps.Point(0, 0),
-                                                    new google.maps.Point(50, 70)
+                                                    new google.maps.Point(65, 77)
                                                 );
 
                                     var marker = new google.maps.Marker({
