--- a/ajax/collection-products-filter.html
+++ b/ajax/collection-products-filter.html
@@ -1,37 +1,57 @@
 <div class="collection-products-list">
     <div class="collection-products-item">
-        <div class="collection-products-item-preview"><a href="#"><img src="files/collection-item-4.jpg" alt="" /></a></div>
-        <div class="collection-products-item-title"><a href="#">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</a></div>
-        <div class="collection-products-item-price">€ 9.29</div>
-        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        <div class="collection-products-item-wrap">
+            <a href="#" class="collection-products-item-inner">
+                <div class="collection-products-item-preview"><img src="files/collection-item-4.jpg" alt="" /></div>
+                <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                <div class="collection-products-item-price">€ 9.29</div>
+            </a>
+            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        </div>
     </div>
 
     <div class="collection-products-item">
-        <div class="collection-products-item-preview"><a href="#"><img src="files/collection-item-5.jpg" alt="" /></a></div>
-        <div class="collection-products-item-title"><a href="#">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</a></div>
-        <div class="collection-products-item-price">€ 9.29</div>
-        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        <div class="collection-products-item-wrap">
+            <a href="#" class="collection-products-item-inner">
+                <div class="collection-products-item-preview"><img src="files/collection-item-5.jpg" alt="" /></div>
+                <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                <div class="collection-products-item-price">€ 9.29</div>
+            </a>
+            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        </div>
     </div>
 
     <div class="collection-products-item">
-        <div class="collection-products-item-preview"><a href="#"><img src="files/collection-item-6.jpg" alt="" /></a></div>
-        <div class="collection-products-item-title"><a href="#">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</a></div>
-        <div class="collection-products-item-price">€ 9.29</div>
-        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        <div class="collection-products-item-wrap">
+            <a href="#" class="collection-products-item-inner">
+                <div class="collection-products-item-preview"><img src="files/collection-item-6.jpg" alt="" /></div>
+                <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                <div class="collection-products-item-price">€ 9.29</div>
+            </a>
+            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        </div>
     </div>
 
     <div class="collection-products-item">
-        <div class="collection-products-item-preview"><a href="#"><img src="files/collection-item-1.jpg" alt="" /></a></div>
-        <div class="collection-products-item-title"><a href="#">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</a></div>
-        <div class="collection-products-item-price">€ 9.29</div>
-        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        <div class="collection-products-item-wrap">
+            <a href="#" class="collection-products-item-inner">
+                <div class="collection-products-item-preview"><img src="files/collection-item-1.jpg" alt="" /></div>
+                <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                <div class="collection-products-item-price">€ 9.29</div>
+            </a>
+            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        </div>
     </div>
 
     <div class="collection-products-item">
-        <div class="collection-products-item-preview"><a href="#"><img src="files/collection-item-2.jpg" alt="" /></a></div>
-        <div class="collection-products-item-title"><a href="#">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</a></div>
-        <div class="collection-products-item-price">€ 9.29</div>
-        <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        <div class="collection-products-item-wrap">
+            <a href="#" class="collection-products-item-inner">
+                <div class="collection-products-item-preview"><img src="files/collection-item-2.jpg" alt="" /></div>
+                <div class="collection-products-item-title">Z1EG1B Одноклавишный выключатель/переключатель10А Brushed Brass</div>
+                <div class="collection-products-item-price">€ 9.29</div>
+            </a>
+            <div class="collection-products-item-compare"><a href="#">в сравнение</a></div>
+        </div>
     </div>
 </div>
 
